--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,3 +3,7 @@ httpport = 8080
 runmode = dev
 copyrequestbody = true
 #sessionon = true
+mysqluser = "root"
+mysqlpass = "123456"
+mysqlurls = "127.0.0.1"
+mysqldb   = "beego"
