测试部分接口。修正bug

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,7 +4,7 @@ runmode = dev
 copyrequestbody = true
 #sessionon = true
 mysqluser = "root"
-mysqlpass = "123456"
+mysqlpass = "lrf64787"
 mysqlurls = "127.0.0.1"
 dbport = "3306"
 mysqldb   = "beego"
